src/manifests/network/cilium/hubble-ui-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - host: hubble-ui.clusterx.qedzone.ro
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
